[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/screens/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://ui/menubuttons/human_vs_ai.png" type="Texture" id=2]
[ext_resource path="res://scripts/ui/Widget.gd" type="Script" id=3]
[ext_resource path="res://scripts/ui/SmallElement.gd" type="Script" id=4]
[ext_resource path="res://ui/menubuttons/online.png" type="Texture" id=5]
[ext_resource path="res://ui/menubuttons/host.png" type="Texture" id=6]
[ext_resource path="res://ui/menubuttons/join.png" type="Texture" id=7]
[ext_resource path="res://ui/menubuttons/human_vs_human.png" type="Texture" id=8]
[ext_resource path="res://ui/menubuttons/settings.png" type="Texture" id=9]
[ext_resource path="res://ui/menubuttons/quit.png" type="Texture" id=10]
[ext_resource path="res://ui/menubuttons/news.png" type="Texture" id=11]
[ext_resource path="res://ui/menubuttons/achivements.png" type="Texture" id=12]
[ext_resource path="res://ui/menubuttons/profile.png" type="Texture" id=13]
[ext_resource path="res://ui/menubuttons/library.png" type="Texture" id=14]
[ext_resource path="res://ui/menubuttons/load.png" type="Texture" id=15]
[ext_resource path="res://ui/buttons/play.png" type="Texture" id=16]
[ext_resource path="res://ui/menubuttons/bug.png" type="Texture" id=17]
[ext_resource path="res://ui/menubuttons/donate.png" type="Texture" id=18]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="MainMenuScreen" type="CenterContainer"]
visible = false
margin_right = 1920.0
margin_bottom = 952.0
rect_min_size = Vector2( 0, 952 )
size_flags_vertical = 0
script = ExtResource( 1 )
hidden_by_default = true

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 652.0
margin_top = 147.0
margin_right = 1268.0
margin_bottom = 805.0
custom_constants/hseparation = 20
columns = 4

[node name="Column1" type="VBoxContainer" parent="GridContainer"]
margin_right = 192.0
margin_bottom = 436.0
size_flags_vertical = 0
custom_constants/separation = 8

[node name="VersusAIContainer" type="VBoxContainer" parent="GridContainer/Column1"]
margin_right = 192.0
margin_bottom = 214.0
size_flags_horizontal = 7
size_flags_vertical = 3
custom_constants/separation = 8
alignment = 1

[node name="VersusAIButton" type="TextureButton" parent="GridContainer/Column1/VersusAIContainer"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
size_flags_horizontal = 3
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )
unnamed = true

[node name="Description" type="Label" parent="GridContainer/Column1/VersusAIContainer"]
margin_top = 200.0
margin_right = 192.0
margin_bottom = 214.0
size_flags_horizontal = 3
text = "BTN_GM_PVC"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="Server" type="VBoxContainer" parent="GridContainer/Column1"]
material = SubResource( 1 )
margin_top = 222.0
margin_right = 192.0
margin_bottom = 436.0
custom_constants/separation = 8

[node name="ServerButton" type="TextureButton" parent="GridContainer/Column1/Server"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )
unnamed = true

[node name="Description" type="Label" parent="GridContainer/Column1/Server"]
margin_top = 200.0
margin_right = 192.0
margin_bottom = 214.0
size_flags_horizontal = 3
text = "BTN_GM_SERVER"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="HostContainer" type="VBoxContainer" parent="GridContainer/Column1"]
visible = false
margin_top = 333.0
margin_right = 192.0
margin_bottom = 658.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8
alignment = 1

[node name="HostButton" type="TextureButton" parent="GridContainer/Column1/HostContainer"]
margin_top = 55.0
margin_right = 192.0
margin_bottom = 247.0
rect_min_size = Vector2( 192, 192 )
size_flags_horizontal = 3
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )
unnamed = true

[node name="Description" type="Label" parent="GridContainer/Column1/HostContainer"]
margin_top = 255.0
margin_right = 192.0
margin_bottom = 269.0
size_flags_horizontal = 3
text = "BTN_GM_HOST"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="HBoxJoin" type="VBoxContainer" parent="GridContainer/Column1"]
visible = false
margin_top = 444.0
margin_right = 192.0
margin_bottom = 658.0
custom_constants/separation = 8

[node name="JoinButton" type="TextureButton" parent="GridContainer/Column1/HBoxJoin"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )
unnamed = true

[node name="Description" type="Label" parent="GridContainer/Column1/HBoxJoin"]
margin_top = 200.0
margin_right = 192.0
margin_bottom = 214.0
size_flags_horizontal = 3
text = "BTN_GM_JOIN"
align = 1
script = ExtResource( 4 )

[node name="Column2" type="VBoxContainer" parent="GridContainer"]
margin_left = 212.0
margin_right = 404.0
margin_bottom = 658.0
size_flags_vertical = 0
custom_constants/separation = 8

[node name="Local" type="VBoxContainer" parent="GridContainer/Column2"]
margin_right = 192.0
margin_bottom = 214.0
size_flags_horizontal = 7
custom_constants/separation = 8
alignment = 1

[node name="PlayerVsPlayerButton" type="TextureButton" parent="GridContainer/Column2/Local"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
size_flags_horizontal = 3
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )
unnamed = true

[node name="Description" type="Label" parent="GridContainer/Column2/Local"]
margin_top = 200.0
margin_right = 192.0
margin_bottom = 214.0
size_flags_horizontal = 3
text = "BTN_GM_PVP"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="VBoxSettings" type="VBoxContainer" parent="GridContainer/Column2"]
margin_top = 222.0
margin_right = 192.0
margin_bottom = 436.0
custom_constants/separation = 8

[node name="SettingsButton" type="TextureButton" parent="GridContainer/Column2/VBoxSettings"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )
unnamed = true

[node name="Description" type="Label" parent="GridContainer/Column2/VBoxSettings"]
margin_top = 200.0
margin_right = 192.0
margin_bottom = 214.0
size_flags_horizontal = 3
text = "BTN_SETTINGS"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="VBoxQuit" type="VBoxContainer" parent="GridContainer/Column2"]
margin_top = 444.0
margin_right = 192.0
margin_bottom = 658.0
custom_constants/separation = 8

[node name="QuitButton" type="TextureButton" parent="GridContainer/Column2/VBoxQuit"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )
unnamed = true

[node name="Description" type="Label" parent="GridContainer/Column2/VBoxQuit"]
margin_top = 200.0
margin_right = 192.0
margin_bottom = 214.0
size_flags_horizontal = 3
text = "BTN_QUIT"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="Column3" type="VBoxContainer" parent="GridContainer"]
visible = false
margin_left = 424.0
margin_right = 616.0
margin_bottom = 880.0
size_flags_vertical = 0
custom_constants/separation = 8

[node name="VBoxNews" type="VBoxContainer" parent="GridContainer/Column3"]
modulate = Color( 1, 0, 0, 1 )
margin_right = 192.0
margin_bottom = 214.0
custom_constants/separation = 8

[node name="LibraryButton" type="TextureButton" parent="GridContainer/Column3/VBoxNews"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
disabled = true
texture_normal = ExtResource( 11 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )

[node name="Description" type="Label" parent="GridContainer/Column3/VBoxNews"]
margin_top = 200.0
margin_right = 192.0
margin_bottom = 214.0
size_flags_horizontal = 3
text = "BTN_GM_NEWS"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="VBoxAchivements" type="VBoxContainer" parent="GridContainer/Column3"]
modulate = Color( 1, 0, 0, 1 )
margin_top = 222.0
margin_right = 192.0
margin_bottom = 436.0
custom_constants/separation = 8

[node name="AchivementsButton" type="TextureButton" parent="GridContainer/Column3/VBoxAchivements"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
disabled = true
texture_normal = ExtResource( 12 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )

[node name="Description" type="Label" parent="GridContainer/Column3/VBoxAchivements"]
margin_top = 200.0
margin_right = 192.0
margin_bottom = 214.0
size_flags_horizontal = 3
text = "BTN_GM_ACHIVEMENTS"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="VBoxWatchOnlineReplays" type="VBoxContainer" parent="GridContainer/Column3"]
modulate = Color( 1, 0, 0, 1 )
margin_top = 444.0
margin_right = 192.0
margin_bottom = 658.0
custom_constants/separation = 8

[node name="WatchOnlineButton" type="TextureButton" parent="GridContainer/Column3/VBoxWatchOnlineReplays"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
disabled = true
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )

[node name="Description" type="Label" parent="GridContainer/Column3/VBoxWatchOnlineReplays"]
margin_top = 200.0
margin_right = 192.0
margin_bottom = 214.0
size_flags_horizontal = 3
text = "BTN_GM_ONLINE_REPLAYS"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="VBoxProfile" type="VBoxContainer" parent="GridContainer/Column3"]
modulate = Color( 1, 0, 0, 1 )
margin_top = 666.0
margin_right = 192.0
margin_bottom = 880.0
custom_constants/separation = 8

[node name="ProfileButton" type="TextureButton" parent="GridContainer/Column3/VBoxProfile"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
disabled = true
texture_normal = ExtResource( 13 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )

[node name="Description" type="Label" parent="GridContainer/Column3/VBoxProfile"]
margin_top = 200.0
margin_right = 192.0
margin_bottom = 214.0
size_flags_horizontal = 3
text = "BTN_GM_PROFILE"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="Column4" type="VBoxContainer" parent="GridContainer"]
margin_left = 424.0
margin_right = 616.0
margin_bottom = 436.0
size_flags_vertical = 0
custom_constants/separation = 8

[node name="VBoxLibrary" type="VBoxContainer" parent="GridContainer/Column4"]
margin_right = 192.0
margin_bottom = 214.0
custom_constants/separation = 8

[node name="LibraryButton" type="TextureButton" parent="GridContainer/Column4/VBoxLibrary"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture_normal = ExtResource( 14 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )
unnamed = true

[node name="Description" type="Label" parent="GridContainer/Column4/VBoxLibrary"]
margin_top = 200.0
margin_right = 192.0
margin_bottom = 214.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "BTN_GM_LIBRARY"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="VBoxLoad" type="VBoxContainer" parent="GridContainer/Column4"]
margin_top = 222.0
margin_right = 192.0
margin_bottom = 436.0
custom_constants/separation = 8

[node name="LoadButton" type="TextureButton" parent="GridContainer/Column4/VBoxLoad"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture_normal = ExtResource( 15 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )
unnamed = true

[node name="Description" type="Label" parent="GridContainer/Column4/VBoxLoad"]
margin_top = 200.0
margin_right = 192.0
margin_bottom = 214.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "BTN_GM_LOAD"
align = 1
script = ExtResource( 4 )

[node name="VBoxLoad2" type="VBoxContainer" parent="GridContainer/Column4"]
visible = false
margin_top = 444.0
margin_right = 192.0
margin_bottom = 658.0
custom_constants/separation = 8

[node name="QuickPlay" type="TextureButton" parent="GridContainer/Column4/VBoxLoad2"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture_normal = ExtResource( 16 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )

[node name="Description" type="Label" parent="GridContainer/Column4/VBoxLoad2"]
margin_top = 200.0
margin_right = 192.0
margin_bottom = 214.0
size_flags_horizontal = 3
text = "BTN_GM_LOAD"
align = 1
script = ExtResource( 4 )

[node name="VBoxBug" type="VBoxContainer" parent="GridContainer/Column4"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_top = 222.0
margin_right = 192.0
margin_bottom = 436.0
custom_constants/separation = 8

[node name="BugsButton" type="TextureButton" parent="GridContainer/Column4/VBoxBug"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
disabled = true
texture_normal = ExtResource( 17 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )

[node name="Description" type="Label" parent="GridContainer/Column4/VBoxBug"]
margin_top = 200.0
margin_right = 192.0
margin_bottom = 214.0
size_flags_horizontal = 3
text = "BTN_GM_BUGS"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="VBoxDonate" type="VBoxContainer" parent="GridContainer/Column4"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_top = 222.0
margin_right = 192.0
margin_bottom = 436.0
custom_constants/separation = 8

[node name="DonateButton" type="TextureButton" parent="GridContainer/Column4/VBoxDonate"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
disabled = true
texture_normal = ExtResource( 18 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )

[node name="Description" type="Label" parent="GridContainer/Column4/VBoxDonate"]
margin_top = 200.0
margin_right = 192.0
margin_bottom = 214.0
size_flags_horizontal = 3
text = "BTN_GM_DONATE"
align = 1
valign = 1
script = ExtResource( 4 )
[connection signal="pressed" from="GridContainer/Column1/VersusAIContainer/VersusAIButton" to="." method="_on_VersusAIButton_pressed"]
[connection signal="pressed" from="GridContainer/Column1/Server/ServerButton" to="." method="_on_ServerListButton_pressed"]
[connection signal="pressed" from="GridContainer/Column1/HostContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="GridContainer/Column1/HBoxJoin/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="GridContainer/Column2/Local/PlayerVsPlayerButton" to="." method="_on_PlayerVsPlayerButton_pressed"]
[connection signal="pressed" from="GridContainer/Column2/VBoxSettings/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="GridContainer/Column2/VBoxQuit/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="GridContainer/Column3/VBoxWatchOnlineReplays/WatchOnlineButton" to="." method="_on_WatchOnlineButton_pressed"]
[connection signal="pressed" from="GridContainer/Column3/VBoxProfile/ProfileButton" to="." method="_on_ProfileButton_pressed"]
[connection signal="pressed" from="GridContainer/Column4/VBoxLibrary/LibraryButton" to="." method="_on_LibraryButton_pressed"]
[connection signal="pressed" from="GridContainer/Column4/VBoxLoad/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="GridContainer/Column4/VBoxLoad2/QuickPlay" to="." method="_on_QuickPlay_pressed"]
[connection signal="pressed" from="GridContainer/Column4/VBoxBug/BugsButton" to="." method="_on_BugsButton_pressed"]
[connection signal="pressed" from="GridContainer/Column4/VBoxDonate/DonateButton" to="." method="_on_DonateButton_pressed"]
